tests/baselines/reference/parserSkippedTokens3.errors.txt
parserSkippedTokens3.ts(1,1): error TS1127: Invalid character.
parserSkippedTokens3.ts(1,5): error TS1127: Invalid character.


==== parserSkippedTokens3.ts (2 errors) ====
    \ ; \
    
!!! error TS1127: Invalid character.
        
!!! error TS1127: Invalid character.